--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./styles.scss" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tauri App</title>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./main.ts" defer></script>
 </head>
 
 <body>
-  <div id="container"></div>
+  <header></header>
+  <main></main>
+  <footer>
+    <cursor-position></cursor-position>
+  </footer>
 </body>
 
 </html>
