--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="./styles.scss" />
+  <link rel="stylesheet" href="./styles/main.scss" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tauri App</title>
-  <script type="module" src="./main.ts" defer></script>
+  <title>EEditorLite</title>
+  <script type="module" src="./scripts/main.ts" defer></script>
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <button id="btn-open">打开</button>
+    <button id="btn-save">保存</button>
+  </header>
   <main></main>
   <footer>
     <cursor-position></cursor-position>
